# sprava

./: .gitignore  README.md  cli.py  pyproject.toml  task.py  test_task.py
tests/: test_task.py
todo/: cli.py
