[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo"
version = "0.1.1"
description = "Simple git-like cli task tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "rich>=14.0.0",
]

[project.scripts]
todo = "todo.cli:cli"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] 

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

